--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,8 @@ extend-exclude = '''
 [tool.ruff]
 target-version = "py310"
 line-length = 100
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "F",   # Pyflakes
@@ -114,7 +116,7 @@ ignore = [
     "E501",  # line too long, handled by black
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.mypy]
