--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.6.0",
     "pre-commit>=3.5.0",
+    # Test dependencies from advanced
+    "scikit-learn>=1.3.0",
+    "plotly>=5.18.0",
 ]
 all = ["nexus-mind[web,advanced,dev]"]
 
