--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,9 +63,10 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.6.0",
     "pre-commit>=3.5.0",
-    # Test dependencies from advanced
+    # Test dependencies from advanced and web
     "scikit-learn>=1.3.0",
     "plotly>=5.18.0",
+    "opencv-python>=4.8.0",
 ]
 all = ["nexus-mind[web,advanced,dev]"]
 
